# fqwb

./: ARCHITECTURE.md  CMakeLists.txt  MODIFICATION_PLAN.md  Program.cs  README.md  build.bat  config.fs  dictionary.fs  dictionary.fsproj  fqwb.csproj  fqwb.sln  fqwb_tsf.cpp  fqwb_tsf.h  fqwb_tsf_example.cpp  fuzzy_sound.fs  history.fs  input.Designer.cs  input.cs  setting.cs
Data/: example.txt
